비지니스 영역 리뉴얼

--- a/src/app/pages/pc/home/galaxy-home.component.html
+++ b/src/app/pages/pc/home/galaxy-home.component.html
@@ -8,7 +8,7 @@
 <app-galaxy-ip></app-galaxy-ip>
 <!-- End ip section -->
 <!-- Begin business section -->
-<app-galaxy-business></app-galaxy-business>
+<app-galaxy-business-renew></app-galaxy-business-renew>
 <!-- End business section -->
 <!-- Begin careers section -->
 <app-galaxy-careers></app-galaxy-careers>
