--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -16,107 +16,154 @@
                     <div class="portfolio_content_area">
                         <div class="portfolio_content">
                             <div class="row" id="portfolio">
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z1.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z1_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-archive"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z1_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z1.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
-                                </div> -->
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z2.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z2_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z3.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z3_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-camera"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
-                                        </div>
-                                    </div>
-                                </div> -->
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z4.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z4_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-chat"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
-                                        </div>
-                                    </div>
-                                </div> -->
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z5.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z5_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z1.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z6.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z2_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z2_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z2.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
-                                </div> -->
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z7.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z7_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z2.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
-                                </div> -->
-                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.7s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z8.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z6_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z3_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z3.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
-                                </div> -->
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
-                                    <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z9.png" alt="title" />
-                                        <div>
-                                            <a href="assets/images/home/portfolio/z9_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
-                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z3.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z4_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z4.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z4.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z5.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z5.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z6_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z6.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z6.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z7_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z7.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z7.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.7s">
+                                    <div class="pc">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z8_detail.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z8.png" alt="title" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="mobile">
+                                        <div class="portfolio_single_content">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                                <img src="assets/images/home/portfolio/z8.png" alt="title" />
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="view_more">
+                            <!-- <div class="view_more">
                                 <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
-                                    <!-- <div>
+                                    <div>
                                         <img src="assets/images/home/ip/more_left.png" alt="title" />
-                                    </div> -->
+                                    </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
                                     <div>
                                         <a href="#">
-                                            <img src="assets/images/home/ip/view_more.png" alt="title" width="100%"/>
+                                            <img src="assets/images/home/ip/view_more.png" alt="title" width="100%" />
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
-                                    <!-- <div>
+                                    <div>
                                         <img src="assets/images/home/ip/more_right.png" alt="title" />
-                                    </div> -->
+                                    </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
