--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -23,16 +23,16 @@
                                 <img src="assets/images/home/intro/first_m.png" width="100%" />
                             </div>
                             <!-- <h1>WE CREATE</h1>
-                            <h1>METARVERS</h1> -->
+                          <h1>METARVERS</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
                             <div class="pc">
                                 <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
-                                <span class="subTitle">즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는</span>
+                                <span class="subTitle">즐겁게 누구나 꿈을 이룰 수 있는</span>
                                 <span class="subTitle">새로운 세계를 만들어 나갑니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
+                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코퍼레이션은 즐겁게 누구나 꿈을 이룰 수 있는 새로운 세계를 만들어 나갑니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion4>
@@ -50,16 +50,16 @@
                                 <img src="assets/images/home/intro/second_m.png" width="100%" />
                             </div>
                             <!-- <h1>NEW WORLD</h1>
-                            <h1>CONNECTION</h1> -->
+                          <h1>CONNECTION</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고</span>
-                                <span class="subTitle">우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합</span>
-                                <span class="subTitle">허브를 만들어 가고 있습니다.</span>
+                                <span class="subTitle">우리가 만든 페르소나 별은 무한한 콘텐츠 세상을 연결하고</span>
+                                <span class="subTitle">갤럭시 IP들은 다양한 비즈니스로 발전하는</span>
+                                <span class="subTitle">메타버스 초연결 통합 허브입니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고 우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합 허브를 만들어 가고 있습니다.</span>
+                                <span class="subTitle">우리가 만든 페르소나 별은 무한한 콘텐츠 세상을 연결하고 갤럭시 IP들은 다양한 비즈니스로 발전하는 메타버스 초연결 통합 허브입니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion3>
@@ -77,15 +77,15 @@
                                 <img src="assets/images/home/intro/third_m.png" width="100%" />
                             </div>
                             <!-- <h1>INSPIRE</h1>
-                            <h1>PERSONA</h1> -->
+                          <h1>PERSONA</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해</span>
-                                <span class="subTitle">우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                                <span class="subTitle">우리는 갤럭시 유니버스를 통해 다양한 IP를 유기적으로</span>
+                                <span class="subTitle">연결하여 지속 가능한 페르소나 생태계를 구축합니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                                <span class="subTitle">우리는 갤럭시 유니버스를 통해 다양한 IP를 유기적으로 연결하여 지속 가능한 페르소나 생태계를 구축합니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion2>
@@ -103,15 +103,15 @@
                                 <img src="assets/images/home/intro/fourth_m.png" width="100%" />
                             </div>
                             <!-- <h1>CULTURE</h1>
-                            <h1>CREATION</h1> -->
+                          <h1>CREATION</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가</span>
-                                <span class="subTitle">새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                                <span class="subTitle">우리가 만든 메타버스 세상 속의 갤럭시 IP는</span>
+                                <span class="subTitle">이전에 경험하지 못한 새로운 세상을 만들어 하나의 문화를 개척합니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가 새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                                <span class="subTitle">우리가 만든 메타버스 세상 속의 갤럭시 IP는 이전에 경험하지 못한 새로운 세상을 만들어 하나의 문화를 개척합니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion1>
