--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -26,7 +26,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z1.png" alt="title" />
                                             </a>
                                         </div>
@@ -42,7 +42,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z2.png" alt="title" />
                                             </a>
                                         </div>
@@ -58,7 +58,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z3.png" alt="title" />
                                             </a>
                                         </div>
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z4.png" alt="title" />
                                             </a>
                                         </div>
@@ -90,7 +90,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z5.png" alt="title" />
                                             </a>
                                         </div>
@@ -106,7 +106,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z6.png" alt="title" />
                                             </a>
                                         </div>
@@ -122,7 +122,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z7.png" alt="title" />
                                             </a>
                                         </div>
@@ -138,7 +138,7 @@
                                     </div>
                                     <div class="mobile">
                                         <div class="portfolio_single_content">
-                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio" class="link-preview">
+                                            <a href="assets/images/home/portfolio/z5_detail_m.png" data-lightbox="portfolio_m" class="link-preview">
                                                 <img src="assets/images/home/portfolio/z8.png" alt="title" />
                                             </a>
                                         </div>
